--- a/style/3-layout/_contactLayout.scss
+++ b/style/3-layout/_contactLayout.scss
@@ -23,6 +23,7 @@ main {
         }
 
         @include breakpoint(desktop) {
+            row-gap: 16rem;
             grid-template-rows: 48rem 36.4rem 0.1rem;
             grid-template-areas:
             "form"
