--- a/style/3-layout/_homeLayout.scss
+++ b/style/3-layout/_homeLayout.scss
@@ -25,6 +25,7 @@ main {
         }
 
         @include breakpoint(desktop) {
+            row-gap: 16rem;
             grid-template-rows: 64rem 64rem 41.2rem 6rem;
             grid-template-areas:
             "hero"
