--- a/style/3-layout/_locationsLayout.scss
+++ b/style/3-layout/_locationsLayout.scss
@@ -21,6 +21,7 @@ main {
         }
 
         @include breakpoint(desktop) {
+            row-gap: 16rem;
             grid-template-rows: 104.2rem 0.1rem;
             grid-template-areas:
             "map-cards"
